Try fixing the button iOS

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ input {
     border-radius: 10px;
 }
 input[type="button"] {
-    -webkit-appearance: none;
+    -webkit-appearance: none !important;
     -moz-appearance: none;
     appearance: none;
 }
